--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development webpack serve --config ./webpack.config.dev.js --mode=development",
-    "build": "NODE_ENV=production webpack --config ./webpack.config.base.js --mode=production",
-    "build:dist-commit": "npm run build && git add dist && git commit -m \"chore: update dist\"",
+    "dev": "NODE_ENV=development webpack watch --config ./webpack.config.dev.js --mode=development",
+    "build": "pnpm run build:js && npm run build:icon && npm run build:misc",
+    "build:js": "NODE_ENV=production webpack --config ./webpack.config.base.js --mode=production",
+    "build:icon": "node scripts/resize-icons.js",
+    "build:misc": "cp ./src/*.html ./dist/ && cp ./src/manifest.json ./dist/",
     "release": "standard-version && git push --follow-tags origin master",
     "lint": "eslint ./src/**/*.js && stylelint ./src/**/*.js"
   },
@@ -54,20 +56,19 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "html-webpack-plugin": "^5.6.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "postcss-styled-syntax": "^0.6.4",
     "prettier": "3.2.5",
     "react-refresh": "^0.14.0",
     "rimraf": "^5.0.5",
+    "sharp": "^0.33.2",
     "standard-version": "^9.0.0",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-standard": "^36.0.0",
     "webpack": "^5.90.3",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@babel/plugin-transform-class-properties": "^7.23.3",
