feat: add action popup

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,9 @@
       "js": ["content.js"]
     }
   ],
+  "action": {
+    "default_popup": "popup.html"
+  },
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
