--- a/package.json
+++ b/package.json
@@ -13,14 +13,8 @@
     "build:icon": "node scripts/resize-icons.js",
     "build:misc": "cp ./src/*.html ./dist/ && cp ./src/manifest.json ./dist/",
     "release": "standard-version && git push --follow-tags origin master",
-    "lint": "eslint ./src/**/*.js && stylelint ./src/**/*.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "npm run lint"
-    }
+    "lint": "eslint ./src/**/*.js && stylelint ./src/**/*.js",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.js": [
@@ -57,8 +51,8 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
+    "husky": "^9.1.1",
+    "lint-staged": "^15.2.7",
     "postcss-styled-syntax": "^0.6.4",
     "prettier": "3.2.5",
     "react-refresh": "^0.14.0",
