fix: wrong manifest v3 format

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
   },
   "permissions": ["storage"],
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": ["background.js"]
   },
   "content_scripts": [
     {
